# Unisoul_beta

./: .env  Cargo.toml  README.md  azurekey.txt  instruction.txt
migrations/2020-10-11-070559_create_unisoul/: down.sql  up.sql
src/: db.rs  error_handler.rs  lib.rs  main.rs  models.rs  schema.rs
src/database/: mod.rs  models.rs  routes.rs
