[package]
name = "unisoul"
version = "0.1.0"
authors = ["Ong Peng Jia <peng-jia.ong@vitrox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
diesel = { version = "1.4.5", features = ["postgres","chrono", "numeric"] }
dotenv = "0.15.0"
chrono = "0.4.1"
bigdecimal = "0.1.2"