[package]
name = "unisoul"
version = "0.1.0"
authors = ["Ong Peng Jia <peng-jia.ong@vitrox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres","chrono", "r2d2","numeric","uuid"] }
dotenv = "0.15.0"
lazy_static = "1.4"
bigdecimal = "0.1.2"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }